# ChangeLog for sci-biology/rebase
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/rebase/ChangeLog,v 1.82 2007/04/11 01:15:11 ribosome Exp $

*rebase-704 (11 Apr 2007)

  11 Apr 2007; Olivier Fisette <ribosome@gentoo.org> +rebase-704.ebuild:
  New upstream version.

*rebase-612 (12 Dec 2006)

  12 Dec 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-611.ebuild,
  +rebase-612.ebuild:
  New upstream version. Removed old version.

  10 Dec 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-601-r1.ebuild,
  -rebase-603.ebuild:
  Pruned old versions.

  20 Nov 2006; <blubb@gentoo.org> rebase-610.ebuild:
  stable on amd64

  15 Nov 2006; Markus Rothe <corsair@gentoo.org> rebase-610.ebuild:
  Stable on ppc64; bug #153766

  03 Nov 2006; nixnut <nixnut@gentoo.org> rebase-610.ebuild:
  Stable on ppc wrt bug 153766

  03 Nov 2006; Olivier Fisette <ribosome@gentoo.org> -rebase-604.ebuild,
  -rebase-606.ebuild, -rebase-607.ebuild, -rebase-608.ebuild,
  -rebase-609.ebuild:
  Pruned old versions.

*rebase-611 (03 Nov 2006)

  03 Nov 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-611.ebuild:
  New upstream version.

  02 Nov 2006; Fabian Groffen <grobian@gentoo.org> rebase-601-r1.ebuild,
  rebase-603.ebuild, rebase-604.ebuild, rebase-606.ebuild,
  rebase-607.ebuild, rebase-608.ebuild, rebase-609.ebuild,
  rebase-610.ebuild:
  Dropped ppc-macos, see you in prefix.

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org> rebase-610.ebuild:
  Added to x86.

*rebase-610 (08 Oct 2006)

  08 Oct 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-610.ebuild:
  New upstream version.

*rebase-609 (12 Sep 2006)

  12 Sep 2006; Olivier Fisette <ribosome@gentoo.org> +rebase-609.ebuild:
  New upstream version.

  19 Aug 2006; Jason Wever <weeve@gentoo.org> rebase-608.ebuild:
  Added ~sparc keyword.

  18 Aug 2006; Jason Wever <weeve@gentoo.org> rebase-601-r1.ebuild:
  Added ~sparc keyword wrt bug #144241.
